Mod is working now for adjustments

--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,8 @@
 [openZone]
-fasterRunning = true
-railMomentum = true
-boostLimit = true
+fasterRunning=True
+railMomentum=True
+boostLimit=True
+
+[global]
+momentum=True
+balancedBoost=True
