--- a/mod.ini
+++ b/mod.ini
@@ -1,18 +1,18 @@
 [Desc]
+Author="DarkHelium"
 Title="Physics"
-Description=""
 Version=1.0
+Description=""
 Date="2024-05-11"
-Author="anavm"
 AuthorURL=""
 
 [Main]
 UpdateServer=""
 SaveFile=""
-ID=""
+ID="97B09667"
 IncludeDir0="."
 IncludeDirCount=1
 DependsCount=0
 DLLFile=""
-CodeFile=""
+CodeFile="Physics.hmm"
 ConfigSchemaFile=""
